========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-12-17

  - Added a --title option to upload-to-sheets in order to conveniently set the
    document's title.

  - Removed obsolete variable LEGACY_DEFAULT_TOLERANCES which had been
    forgotten.


2016-12-15

  - Made beancount.ingest.extract print out a stack trace when an unexpected
    exception is raised.

  - Fixed bugs in beancount.query.query_render where expand wasn't being passed
    through the rendering functions.

  - Deprecated bin/upload-csv-to-google-sheet; I moved the last version to
    beancount/experiments/gapis in case you've come to be dependent on its
    particularities. It doesn't need any of the Beancount libraries, so you can
    just copy it somewhere and keep using it if so desired.

  - Replaced "bin/upload-csv-to-google-sheet" to "bin/upload-to-sheets". The
    newer script is a complete rewrite which does not require the antiquated
    gdata library, and which uses the latest and greatest version of the Google
    Sheets API (v4). You don't need gdata anymore. Moreover, this one runs in
    Python3 instead of depending on Python2.

    The script has slightly improved invocation semantics, and I'll using it
    regularly to share CSV files with others, most often CSV files produced by
    bean-query.


2016-12-11

  - Changed b.p.split_expenses outputs to be more useful.


2016-12-10

  - Made Amount, Posting, Cost and CostSpec all immutable classes that inherit
    from typing.NamedTuple.

  - Removed mutable method Posting.add().


2016-12-05

  - Merged changes made for calculating wash sales a long time ago. I had
    implemnted a temporary kludge to carry dates on all augmenting postings,
    left it in a branch so I could use it there for taxes every year. Now that
    the booking branch is merged, this is supported by default, so I could undo
    that kludge. Some changes remained:
