@@ -130,7 +130,8 @@ def extract(importer_config,
             output,
             entries=None,
             options_map=None,
-            mindate=None):
+            mindate=None,
+            ascending=True):
     """Given an importer configuration, search for files that can be imported in the
     list of files or directories, run the signature checks on them, and if it
     succeeds, run the importer on the file.
@@ -146,6 +147,8 @@ def extract(importer_config,
         extracted entries to be merged in.
       options_map: The options parsed from existing file.
       mindate: Optional minimum date to output transactions for.
+      ascending: A boolean, true to print entries in ascending order, false if
+        descending is desired.
     """
     allow_none_for_tags_and_links = (
         options_map and options_map["allow_deprecated_none_for_tags_and_links"])
@@ -171,6 +174,8 @@ def extract(importer_config,
             if not new_entries and not duplicate_entries:
                 continue
 
+            if not ascending:
+                new_entries.reverse()
             print_extracted_entries(importer, new_entries, output)
 
 
@@ -181,6 +186,11 @@ def main():
                         default=None,
                         help=('Beancount file or existing entries for de-duplication '
                               '(optional)'))
+
+    parser.add_argument('-r', '--reverse', '--descending',
+                        action='store_const', dest='ascending',
+                        default=True, const=False,
+                        help='Write out the entries in descending order')
 
     args, config, downloads_directories = scripts_utils.parse_arguments(parser)
 
@@ -193,5 +203,5 @@ def main():
 
     extract(config, downloads_directories, sys.stdout,
             entries=entries, options_map=options_map,
-            mindate=None)
+            mindate=None, ascending=args.ascending)
     return 0
